--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
         </head>
     <body>
-       <h1>фиг вам ани app inventor и мой акк идити в баню</h1>
+       <h1>вот ссылки на:</h1>
+       <h1>дискорд:https://discord.gg/vJzV76JWzG</h1>
+       <h1>телеграм:https://t.me/robloxergroup</h1
     </body>
 </html>
